--- a/CalculusAndTheQuadraticFormula.tex
+++ b/CalculusAndTheQuadraticFormula.tex
@@ -21,5 +21,6 @@ started with Ximera for course instructors.
 \activity{FoldedPaper/FoldedPaper}
 \activity{BishopFrames/BishopFrames} 
 \activity{ClockHands/ClockHands} 
+\activity{DiscoDancing/DiscoDancing} 
 
 \end{document}
