--- a/ClockHands/ClockHands.tex
+++ b/ClockHands/ClockHands.tex
@@ -32,11 +32,11 @@ A problem in Stewart asks to find the rate of change in the distance between the
 \section*{A Computational Solution}
 %It simplifies things if we ignore time and work in the reference frame of one of the hands
 
-We'll let $a$ and $b$ denote the respective lengths of the hour and minute hands, $\theta$ the angle (in radians) between the hands, and $c$ the distance between their tips. Ignoring time for the moment, our first step is to maximize the derivative,
+We'll let $a$ and $b$ denote the respective lengths of the hour and minute hands, $\theta$ the angle (in radians) between the hands, and $c$ the distance. Ignoring time for the moment, our first step is to maximize the derivative,
 \[
         \frac{dc}{d\theta} = \frac{ab\sin \theta}{c} = \frac{ab \sin \theta}{\sqrt{a^2+b^2-2ab\cos\theta}}.
 \]
-After differentiating again and doing some algebra 
+Differentiating again and doing some algebra gives
 \[
        \frac{d^2c}{d\theta^2} = \frac{ab}{c^3} \left( c^2\cos\theta - ab\sin^2\theta  \right).
 \]
@@ -57,13 +57,15 @@ Assuming the minute hand is longer than the hour hand ($b>a$) and $0\leq \theta 
 \section*{A More Geometrical Solution}
 We could have saved ourselves the trouble of taking the second derivative by using the law of sines in $\Delta ABC$. Then %to write the rate of change $dc/d\theta$ as
 \[
-    \Big| \frac{dc}{d\theta}  \Big| =   \frac{ab\sin C}{c}  = \frac{ab \sin A}{a} = b\sin A .
+    \Big| \frac{dc}{d\theta}  \Big| =   \frac{ab\sin C}{c}  = \frac{ab \sin B}{B} = a\sin B
 \]
-To do this, note that when $0<\theta < \pi$, $ab\sin\theta = 2K$ is twice the area of $\Delta ABC$. So
-\[
-     \Big| \frac{dc}{d\theta} \Big| = \frac{2K}{c}  = h,
-\]
-where $h$ is the altitude from from $C$ to side $\overline{AB}$ in $\Delta ABC$ above. This distance is maximized when $\overline{CA}$ is perpendicular to $\overline{AB}$, giving the same result as before. 
+so that the rate of change is maximized when $B = \pi/2$ or when $\theta = \arccos(a/b)$ as above.
+
+%To do this, note that when $0<\theta < \pi$, $ab\sin\theta = 2K$ is twice the area of $\Delta ABC$. So
+%\[
+%     \Big| \frac{dc}{d\theta} \Big| = \frac{2K}{c}  = h,
+%\]
+%where $h$ is the altitude from from $C$ to side $\overline{AB}$ in $\Delta ABC$ above. This distance is maximized when $\overline{CA}$ is perpendicular to $\overline{AB}$, giving the same result as before. 
 
 %Or we could use the law of sines in $\Delta ABC$ to get
 %\[
