--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -5,11 +5,24 @@
 
 \begin{document}
 \begin{abstract}
-A twist on a familiar problem leads to deeper considerations.
+A twist on a familiar problem leads to other considerations.
 \end{abstract}
 \maketitle
 
+\section*{DiscoDancing}
 
+\section*{Poncelet's Porism}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{lwbypn9rje}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/lwbypn9rje}{Poncelts Porism and Jacobi}
+
+\section*{Revolving Pendulums}
 
 
 \end{document}
