--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -14,6 +14,7 @@ A twist on a familiar problem leads to other considerations.
 \section*{Poncelet's Porism}
 
 
+
 \begin{onlineOnly}
     \begin{center}
 \desmos{lwbypn9rje}{450}{600}  
@@ -21,6 +22,18 @@ A twist on a familiar problem leads to other considerations.
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/lwbypn9rje}{Poncelts Porism and Jacobi}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{rxknxafhly}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/rxknxafhly}{Jacobi Elliptic Functions and Theta Functions v 2}
+
+
+
 
 \section*{Revolving Pendulums}
 
