--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -5,13 +5,41 @@
 
 \begin{document}
 \begin{abstract}
-A twist on a familiar problem leads to other considerations.
+A twist on the lighthouse problem (related rates) leads to Poncelet's porism and some insights into simple pendulums.
 \end{abstract}
 \maketitle
+
+\section*{Main Results}
+
+\begin{itemize}
+
+\item{The}
+
+\end{itemize}
+
 
 \section*{DiscoDancing}
 
 \section*{Poncelet's Porism}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{q16ify3gtm}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/q16ify3gtm}{Poncelt Metric with Jacobi Functions}
+
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{fuebxksd0c}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/fuebxksd0c}{Poncelt Metric with Jacobi Functions 2}
 
 
 
@@ -21,18 +49,30 @@ A twist on a familiar problem leads to other considerations.
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/lwbypn9rje}{Poncelts Porism and Jacobi}
+\href{https://www.desmos.com/calculator/lwbypn9rje}{Poncelets Porism and Jacobi}
 
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{rxknxafhly}{450}{600}  
+\desmos{svb8pwijet}{450}{600}  
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/rxknxafhly}{Jacobi Elliptic Functions and Theta Functions v 2}
+\href{https://www.desmos.com/calculator/svb8pwijet}{Jacobi Elliptic Functions and Theta Functions v 2}
 
 
+
+\section{Jacobi Formulas}
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{wnef0tpllt}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/wnef0tpllt}{Jacobi Formula}
+
+wnef0tpllt
 
 
 \section*{Revolving Pendulums}
