--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -35,11 +35,11 @@ A twist on the lighthouse problem (related rates) leads to Poncelet's porism and
 
 \begin{onlineOnly}
     \begin{center}
-\desmos{fuebxksd0c}{450}{600}  
+\desmos{hm5zop04ob}{450}{600}  
 \end{center}
 \end{onlineOnly}
 
-\href{https://www.desmos.com/calculator/fuebxksd0c}{Poncelt Metric with Jacobi Functions 2}
+\href{https://www.desmos.com/calculator/hm5zop04ob}{Poncelt Metric with Jacobi Functions 2}
 
 
 
