--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -18,6 +18,20 @@ A twist on the lighthouse problem (related rates) leads to Poncelet's porism and
 \end{itemize}
 
 
+\section{Introduction}
+
+
+The chord below bisects the pendulum motion. Draw other bisecting chords.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{zlyigzhmpn}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/zlyigzhmpn}{Revolving Pendulum Opening Problem 1}
+
+
 \section*{DiscoDancing}
 
 \section*{Poncelet's Porism}
