--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -20,8 +20,8 @@ A twist on the lighthouse problem (related rates) leads to Poncelet's porism and
 
 \section{Introduction}
 
-
-The chord below bisects the pendulum motion. Draw other bisecting chords.
+\begin{exploration}
+The chord below bisects the motion of a revolving pendulum. Draw other bisecting chords.
 
 \begin{onlineOnly}
     \begin{center}
@@ -30,6 +30,22 @@ The chord below bisects the pendulum motion. Draw other bisecting chords.
 \end{onlineOnly}
 
 \href{https://www.desmos.com/calculator/zlyigzhmpn}{Revolving Pendulum Opening Problem 1}
+
+\end{exploration}
+
+\begin{exploration}
+The chord below bisects the motion of a revolving pendulum. Draw other bisecting chords.
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{hqajtdhr31}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/hqajtdhr31}{Revolving Pendulum Opening Problem 2}
+
+\end{exploration}
+
 
 
 \section*{DiscoDancing}
