--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\title{Disco Dancing, Poncelet's Porism, and Revolving Pendulums}
+\title{Disco Dancing, Poncelet's Porism, and Simple Pendulums}
 
 \newcommand{\pskip}{\vskip 0.1 in}
 
@@ -19,6 +19,21 @@ A twist on the lighthouse problem (related rates) leads to Poncelet's porism and
 
 
 \section{Introduction}
+
+\begin{exploration}
+
+
+\begin{onlineOnly}
+    \begin{center}
+\desmos{wmyk3ioe3t}{450}{600}  
+\end{center}
+\end{onlineOnly}
+
+\href{https://www.desmos.com/calculator/wmyk3ioe3t}{Oscillating Pendulum}
+
+
+
+\end{exploration}
 
 \begin{exploration}
 The chord below bisects the motion of a revolving pendulum. Draw other bisecting chords.
