--- a/DiscoDancing/DiscoDancing.tex
+++ b/DiscoDancing/DiscoDancing.tex
@@ -9,7 +9,11 @@ We investigate the families of \emph{isochronous chords} of a pendulum motion. T
 \end{abstract}
 \maketitle
 
+Think of a simple pendulum, and you probably picture an oscillating mass at the end of a string. But this paper is mostly about revolving pendulums. Imagine instead a mass attached to a weightless rod or a small bead that slides without friction around a circluar wire. Imagine also, the mass (or bead) to be launched from its low point with sufficient speed to repeatedly revolve around its circular path. Now suppose we wanted to construct the chords of the circular path that bisect the period. One such chord is the vertical diameter. Another is horizontal and it lies somewhere above the center. But where? And what can we say about the other bisecting chords.
 
+Or pick some fraction of the period of revolution. How can we draw a chord that subtends an arc traversed in this fraction of the period? What can we say about all such chords and the curve they envelope?
+
+These questions are closely related to Poncelet's Porism, or rather what appears to be the standard proof of the porism.
 
 
 
@@ -149,14 +153,24 @@ Another way to describe the continuous equal-time motions is as
 \[
       v_P = v(\phi) = \omega_0 \rho (\phi) h(\phi) ,
 \]
-where $\omega_0$ is a constant with units rad/sec and $h$ is a function with period $\pi$ and dimensionless output. For example, 
+where $\omega_0$ is a constant with units rad/sec and $h$ is a function with period $\pi$ and dimensionless output. For example, since
+\[
+   v_P = \frac{ds}{dt} =  ( \rho \csc \alpha ) \frac{d\phi}{dt}
+\]
+
+
+
+For example, 
 since $ds/d\phi = \rho \sec\alpha$, choosing $h(\phi) = \csc \alpha$ gives the motion that rotates about $A$ at a constant rate of $\omega_0$ rad/sec.
 
 But a simpler choice would be to take $h(\phi)=1$ to get the constant-time motion
 \[
    v_P =   v(\phi) = \omega_0 \rho(\phi) 
 \]
-with speed proportional to the distance $\rho(\phi) = AP$. Here $\omega_0$ is the rotation rate of chord $PP^\prime$ when $PP^\prime$ is the vertical diameter through $A$. 
+with speed proportional to the distance $\rho(\phi) = AP$. Here $\omega_0$ is the rotation rate of chord $PP^\prime$ when $PP^\prime$ is the vertical diameter through $A$. For this motion, the rotation rate $\omega = \omega(\phi)$ is
+
+
+
 
 
 
